8229701: aarch64: C2 OSR compilation fails with "shouldn't process one node several times" in final graph reshaping

Reviewed-by: thartmann, kvn